--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,6 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -48,6 +47,8 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="app.js"></script>
+    <script type="text/javascript" src="auth/auth.controller.js"></script>
+    <script type="text/javascript" src="auth/auth.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
