add controllers and services to Users

--- a/app/index.html
+++ b/app/index.html
@@ -47,8 +47,8 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="app.js"></script>
-    <script type="text/javascript" src="auth/auth.controller.js"></script>
-    <script type="text/javascript" src="auth/auth.service.js"></script>
+    <script src="auth/auth.controller.js"></script>
+    <script src="auth/auth.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
