add ability to create channels and their sidebar

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,6 @@
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
@@ -49,8 +48,10 @@
     <script src="app.js"></script>
     <script src="auth/auth.controller.js"></script>
     <script src="auth/auth.service.js"></script>
-    <script type="text/javascript" src="users/profile.controller.js"></script>
-    <script type="text/javascript" src="users/user.service.js"></script>
+    <script src="users/profile.controller.js"></script>
+    <script src="users/user.service.js"></script>
+    <script src="channels/channels.service.js"></script>
+    <script src="channels/channels.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
