finish adding profiles

--- a/app/index.html
+++ b/app/index.html
@@ -49,8 +49,8 @@
     <script src="app.js"></script>
     <script src="auth/auth.controller.js"></script>
     <script src="auth/auth.service.js"></script>
-    <script type="text/javascript" src="users/profile.controller.js"></script>
-    <script type="text/javascript" src="users/user.service.js"></script>
+    <script src="users/profile.controller.js"></script>
+    <script src="users/user.service.js"></script>
     <!-- endbuild -->
-</body>
+  </body>
 </html>
