--- a/app/auth/register.html
+++ b/app/auth/register.html
@@ -4,6 +4,10 @@
     <h1><a ui-sref="home"><img class="logo-img" src="images/logo.png" /></a> Register</h1>
   </div>
 
+    <div>
+    AuthCtrl.message: {{ authCtrl.message}}
+   </div>
+
   <div ng-show="authCtrl.error">
     <span>{{ authCtrl.error.message }}</span>
   </div>
