--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,8 @@
     <script src="auth/auth.service.js"></script>
     <script src="users/profile.controller.js"></script>
     <script src="users/user.service.js"></script>
+    <script src="channels/channels.service.js"></script>
+    <script src="channels/channels.controller.js"></script>
     <!-- endbuild -->
   </body>
 </html>
