debug profile routing

--- a/app/channels/index.html
+++ b/app/channels/index.html
@@ -16,7 +16,7 @@
 
 			<!-- Create a link to the channels.create state below the channel listing: -->
 			<div class="channel create">
-				<a ui-sref="channel.create">+ create channel </a>
+				<a ui-sref="channels.create">+ create channel </a>
 			</div>
 
 		</div>
