--- a/app/index.html
+++ b/app/index.html
@@ -52,8 +52,8 @@
     <script src="users/user.service.js"></script>
     <script src="channels/channels.service.js"></script>
     <script src="channels/channels.controller.js"></script>
-    <script src="messages/messages.controller.js"></script>
-    <script src="messages/messages.service.js"></script>
+    <script src="channels/messages.controller.js"></script>
+    <script src="channels/messages.service.js"></script>
     <!-- endbuild -->
 
   </body>
